Ajout de la fonctionnalité d'exportation complète d'un projet.

--- a/docker-buildroot/html/index.html
+++ b/docker-buildroot/html/index.html
@@ -99,6 +99,7 @@
           <p class="poweron"><input class="fr" type="button" value="Arrêter Machine Virtuelle" onclick="spa.stopVM();"><input class="en" type="button" value="Stop Virtual Machine" onclick="spa.stopVM();"></p>
           <p class="poweron"><input class="fr" type="button" value="Visualiser Machine Virtuelle" onclick="spa.displayVM();"><input class="en" type="button" value="Display Virtual Machine" onclick="spa.displayVM();"></p>
           <p class="poweron"><b><span class="fr">Accès aux fichiers par sftp sur le port n°</span><span class="en">Access to files via sftp on port n°</span> <span id="settings_sftp"></span></b></p>
+          <p class="poweron"><input class="fr" type="button" value="Télécharger le projet" onclick="spa.savePrj();"><input class="en" type="button" value="Download the project" onclick="spa.savePrj();"></p>
         </div>
         <div id="gitlog"></div>
       </main>
